# diskalert

./: Dockerfile  Makefile  README.rst  diskalert.env  diskpatrol.conf  diskpatrol.env  diskpatrol.service  pyoxidizer.bzl  pyproject.toml  run.sh
debian/: changelog  control  copyright  rules
diskalert/: diskalert.py
diskpatrol/: __init__.py  cli.py  diskpatrol.py
pkgdir/: pyoxidizer.bzl  pyproject.toml
pkgdir/diskpatrol/: __init__.py  cli.py
scripts/: build.sh  diskpatrol.conf.sample  diskpatrol.control  diskpatrol.logrotate  diskpatrol.spec
scripts/DEBIAN/: conffiles  control  postinst  prerm
